user and items to jpa