@@ -1,25 +1,27 @@
 package ru.practicum.shareit.item.service;
 
+import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import ru.practicum.shareit.item.dto.ItemDto;
 import ru.practicum.shareit.item.mapper.ItemMapper;
 import ru.practicum.shareit.item.model.Item;
-import ru.practicum.shareit.item.storage.ItemStorage;
+import ru.practicum.shareit.item.storage.ItemRepository;
 import ru.practicum.shareit.user.model.User;
 import ru.practicum.shareit.user.service.UserService;
 import ru.practicum.shareit.util.exception.NotFoundException;
 import ru.practicum.shareit.util.exception.UnauthorizedException;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 import java.util.Objects;
 import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Transactional
 public class ItemServiceImpl implements ItemService {
-    private final ItemStorage itemStorage;
+    private final ItemRepository itemRepository;
     private final UserService userService;
 
     @Override
@@ -27,47 +29,43 @@ public class ItemServiceImpl implements ItemService {
         User owner = userService.findById(userId);
         Item item = ItemMapper.toItem(itemDto);
         item.setOwner(owner);
-        return ItemMapper.toItemDto(itemStorage.create(item));
+        return ItemMapper.toItemDto(itemRepository.save(item));
     }
 
     @Override
     public ItemDto updateItem(Long userId, ItemDto itemDto) {
-        Item existingItem = itemStorage.findById(itemDto.getId())
+        Item existingItem = itemRepository.findById(itemDto.getId())
                 .orElseThrow(() -> new NotFoundException("Вещь с id=" + itemDto.getId() + " не найдена."));
 
         if (!existingItem.getOwner().getId().equals(userId)) {
             throw new UnauthorizedException("Пользователь не является владельцем вещи.");
         }
-        if (Objects.nonNull(itemDto.getName())) {
-            existingItem.setName(itemDto.getName());
-        }
-        if (Objects.nonNull(itemDto.getDescription())) {
-            existingItem.setDescription(itemDto.getDescription());
-        }
-        if (Objects.nonNull(itemDto.getAvailable())) {
-            existingItem.setAvailable(itemDto.getAvailable());
-        }
-        return ItemMapper.toItemDto(itemStorage.save(existingItem));
+        if (Objects.nonNull(itemDto.getName())) existingItem.setName(itemDto.getName());
+        if (Objects.nonNull(itemDto.getDescription())) existingItem.setDescription(itemDto.getDescription());
+        if (Objects.nonNull(itemDto.getAvailable())) existingItem.setAvailable(itemDto.getAvailable());
+
+        return ItemMapper.toItemDto(itemRepository.save(existingItem));
     }
 
     @Override
     public ItemDto getItemById(Long itemId) {
-        return itemStorage.findById(itemId)
+        return itemRepository.findById(itemId)
                 .map(ItemMapper::toItemDto)
                 .orElseThrow(() -> new NotFoundException("Вещь с id=" + itemId + " не найдена."));
     }
 
     @Override
     public Collection<ItemDto> getUserItems(Long userId) {
-        return itemStorage.findAllByOwnerId(userId).stream()
+        return itemRepository.findAllByOwnerId(userId).stream()
                 .map(ItemMapper::toItemDto)
                 .collect(Collectors.toList());
     }
 
     @Override
     public Collection<ItemDto> searchItems(String text) {
-        if (text.isBlank()) return Collections.emptyList();
-        return itemStorage.searchAvailableItems(text).stream()
+        if (text.isBlank()) return List.of();
+        return itemRepository.findByNameContainingIgnoreCaseAndAvailableTrueOrDescriptionContainingIgnoreCaseAndAvailableTrue(text, text)
+                .stream()
                 .map(ItemMapper::toItemDto)
                 .collect(Collectors.toList());
     }
